--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,13 @@
 		"**/CVS": true,
 		"**/.DS_Store": true,
 	},
-	"C_Cpp.errorSquiggles": "Disabled"
+	"C_Cpp.errorSquiggles": "Disabled",
+	"files.associations": {
+		"io": "llvm",
+		"std": "llvm",
+		"*.wasm": "wasm",
+		"stddef.h": "c",
+		"block.h": "c",
+		"chunk.h": "c"
+	}
 }
