--- a/Makefile.new
+++ b/Makefile.new
@@ -2,7 +2,7 @@
 #
 #   raylib makefile for Desktop platforms, Raspberry Pi, Android and HTML5
 #
-#   Copyright (c) 2013-2019 Ramon Santamaria (@raysan5)
+#   Copyright (c) 2013-2023 Ramon Santamaria (@raysan5)
 #
 #   This software is provided "as-is", without any express or implied warranty. In no event
 #   will the authors be held liable for any damages arising from the use of this software.
@@ -23,50 +23,35 @@
 
 .PHONY: all clean
 
-# Define required raylib variables
-PROJECT_NAME       ?= makecraft
-RAYLIB_VERSION     ?= 4.0.0
-RAYLIB_PATH        ?= ..
+# Define required environment variables
+#------------------------------------------------------------------------------------------------
+# Define target platform: PLATFORM_DESKTOP, PLATFORM_RPI, PLATFORM_DRM, PLATFORM_ANDROID, PLATFORM_WEB
+PLATFORM              ?= PLATFORM_DESKTOP
 
-#RAYLIB_INCLUDE_PATH   ?= /usr/local/include
-RAYLIB_INCLUDE_PATH   ?= /usr/include
+# Define required raylib variables
+PROJECT_NAME          ?= makecraft
+RAYLIB_VERSION        ?= 4.2.0
+RAYLIB_PATH           ?= ..
+
+# Locations of raylib.h and libraylib.a/libraylib.so
+# NOTE: Those variables are only used for PLATFORM_OS: LINUX, BSD
+RAYLIB_INCLUDE_PATH   ?= /usr/local/include
 RAYLIB_LIB_PATH       ?= /usr/local/lib
 
-# Define compiler path on Windows
-COMPILER_PATH      ?= C:/raylib/w64devkit/bin
-
-# Define default options
-# One of PLATFORM_DESKTOP, PLATFORM_RPI, PLATFORM_ANDROID, PLATFORM_WEB
-PLATFORM           ?= PLATFORM_DESKTOP
-
-# Locations of your newly installed library and associated headers. See ../src/Makefile
-# On Linux, if you have installed raylib but cannot compile the examples, check that
-# the *_INSTALL_PATH values here are the same as those in src/Makefile or point to known locations.
-# To enable system-wide compile-time and runtime linking to libraylib.so, run ../src/$ sudo make install RAYLIB_LIBTYPE_SHARED.
-# To enable compile-time linking to a special version of libraylib.so, change these variables here.
-# To enable runtime linking to a special version of libraylib.so, see EXAMPLE_RUNTIME_PATH below.
-# If there is a libraylib in both EXAMPLE_RUNTIME_PATH and RAYLIB_INSTALL_PATH, at runtime,
-# the library at EXAMPLE_RUNTIME_PATH, if present, will take precedence over the one at RAYLIB_INSTALL_PATH.
-# RAYLIB_INSTALL_PATH should be the desired full path to libraylib. No relative paths.
-DESTDIR ?= /usr/local
-RAYLIB_INSTALL_PATH ?= $(DESTDIR)/lib
-# RAYLIB_H_INSTALL_PATH locates the installed raylib header and associated source files.
-RAYLIB_H_INSTALL_PATH ?= $(DESTDIR)/include
-
-# Library type used for raylib: STATIC (.a) or SHARED (.so/.dll)
+# Library type compilation: STATIC (.a) or SHARED (.so/.dll)
 RAYLIB_LIBTYPE        ?= STATIC
 
 # Build mode for project: DEBUG or RELEASE
 BUILD_MODE            ?= RELEASE
 
 # Use external GLFW library instead of rglfw module
-# TODO: Review usage on Linux. Target version of choice. Switch on -lglfw or -lglfw3
 USE_EXTERNAL_GLFW     ?= FALSE
 
-# Use Wayland display server protocol on Linux desktop
-# by default it uses X11 windowing system
+# Use Wayland display server protocol on Linux desktop (by default it uses X11 windowing system)
+# NOTE: This variable is only used for PLATFORM_OS: LINUX
 USE_WAYLAND_DISPLAY   ?= FALSE
 
+# PLATFORM_WEB: Default properties
 BUILD_WEB_ASYNCIFY    ?= TRUE
 BUILD_WEB_SHELL       ?= $(RAYLIB_PATH)/src/minshell.html
 BUILD_WEB_HEAP_SIZE   ?= 134217728
@@ -82,13 +67,12 @@ ifeq ($(PLATFORM),PLATFORM_RPI)
     endif
 endif
 
-
 # Determine PLATFORM_OS in case PLATFORM_DESKTOP or PLATFORM_WEB selected
 ifeq ($(PLATFORM),$(filter $(PLATFORM),PLATFORM_DESKTOP PLATFORM_WEB))
     # No uname.exe on MinGW!, but OS=Windows_NT on Windows!
     # ifeq ($(UNAME),Msys) -> Windows
     ifeq ($(OS),Windows_NT)
-        PLATFORM_OS = WINDOWS
+		PLATFORM_OS = WINDOWS
     else
         UNAMEOS = $(shell uname)
         ifeq ($(UNAMEOS),Linux)
@@ -132,15 +116,17 @@ ifeq ($(PLATFORM),PLATFORM_DESKTOP)
         RAYLIB_PATH     = $(realpath $(RAYLIB_PREFIX))
     endif
 endif
-# Default path for raylib on Raspberry Pi, if installed in different path, update it!
-# This is not currently used by src/Makefile. Not sure of its origin or usage. Refer to wiki.
-# TODO: update install: target in src/Makefile for RPI, consider relation to LINUX.
+
+# Default path for raylib on Raspberry Pi
 ifeq ($(PLATFORM),PLATFORM_RPI)
-    RAYLIB_PATH       ?= /home/pi/raylib
+    RAYLIB_PATH        ?= /home/pi/raylib
 endif
 ifeq ($(PLATFORM),PLATFORM_DRM)
     RAYLIB_PATH        ?= /home/pi/raylib
 endif
+
+# Define raylib release directory for compiled library
+RAYLIB_RELEASE_PATH    ?= $(RAYLIB_PATH)/src
 
 ifeq ($(PLATFORM),PLATFORM_WEB)
 	ifeq ($(PLATFORM_OS),WINDOWS)
@@ -154,27 +140,9 @@ ifeq ($(PLATFORM),PLATFORM_WEB)
 	endif
 endif
 
-# Define raylib release directory for compiled library.
-# RAYLIB_RELEASE_PATH points to provided binaries or your freshly built version
-RAYLIB_RELEASE_PATH 	?= $(RAYLIB_PATH)/src
-
-# EXAMPLE_RUNTIME_PATH embeds a custom runtime location of libraylib.so or other desired libraries
-# into each example binary compiled with RAYLIB_LIBTYPE=SHARED. It defaults to RAYLIB_RELEASE_PATH
-# so that these examples link at runtime with your version of libraylib.so in ../release/libs/linux
-# without formal installation from ../src/Makefile. It aids portability and is useful if you have
-# multiple versions of raylib, have raylib installed to a non-standard location, or want to
-# bundle libraylib.so with your game. Change it to your liking.
-# NOTE: If, at runtime, there is a libraylib.so at both EXAMPLE_RUNTIME_PATH and RAYLIB_INSTALL_PATH,
-# The library at EXAMPLE_RUNTIME_PATH, if present, will take precedence over RAYLIB_INSTALL_PATH,
-# Implemented for LINUX below with CFLAGS += -Wl,-rpath,$(EXAMPLE_RUNTIME_PATH)
-# To see the result, run readelf -d core/core_basic_window; looking at the RPATH or RUNPATH attribute.
-# To see which libraries a built example is linking to, ldd core/core_basic_window;
-# Look for libraylib.so.1 => $(RAYLIB_INSTALL_PATH)/libraylib.so.1 or similar listing.
-EXAMPLE_RUNTIME_PATH   ?= $(RAYLIB_RELEASE_PATH)
-
-# Define default C compiler: gcc
-# NOTE: define g++ compiler if using C++
-CC = g++
+# Define default C compiler: CC
+#------------------------------------------------------------------------------------------------
+CC = gcc
 
 ifeq ($(PLATFORM),PLATFORM_DESKTOP)
     ifeq ($(PLATFORM_OS),OSX)
@@ -195,13 +163,14 @@ ifeq ($(PLATFORM),PLATFORM_RPI)
 endif
 ifeq ($(PLATFORM),PLATFORM_WEB)
     # HTML5 emscripten compiler
-    # WARNING: To compile to HTML5, code must be redesigned 
+    # WARNING: To compile to HTML5, code must be redesigned
     # to use emscripten.h and emscripten_set_main_loop()
     CC = emcc
 endif
 
-# Define default make program: Mingw32-make
-MAKE = make
+# Define default make program: MAKE
+#------------------------------------------------------------------------------------------------
+MAKE ?= make
 
 ifeq ($(PLATFORM),PLATFORM_DESKTOP)
     ifeq ($(PLATFORM_OS),WINDOWS)
@@ -215,23 +184,22 @@ ifeq ($(PLATFORM),PLATFORM_WEB)
     MAKE = mingw32-make
 endif
 
-# Define compiler flags:
-#  -O0                  defines optimization level (no optimization, better for debugging)
+# Define compiler flags: CFLAGS
+#------------------------------------------------------------------------------------------------
 #  -O1                  defines optimization level
 #  -g                   include debug information on compilation
-#  -s                   strip unnecessary data from build -> do not use in debug builds
+#  -s                   strip unnecessary data from build
 #  -Wall                turns on most, but not all, compiler warnings
 #  -std=c99             defines C language mode (standard C from 1999 revision)
 #  -std=gnu99           defines C language mode (GNU C from 1999 revision)
 #  -Wno-missing-braces  ignore invalid warning (GCC bug 53119)
+#  -Wno-unused-value    ignore unused return values of some functions (i.e. fread())
 #  -D_DEFAULT_SOURCE    use with -std=c99 on Linux and PLATFORM_WEB, required for timespec
-#CFLAGS += -Wall -std=c99 -D_DEFAULT_SOURCE -Wno-missing-braces
-CFLAGS += -Wall -D_DEFAULT_SOURCE -Wno-missing-braces -Wunused-result
-#CFLAGS += -I/usr/local/include -L/usr/local/lib
+CFLAGS = -Wall -std=c99 -D_DEFAULT_SOURCE -Wno-missing-braces -Wunused-result
 
 ifeq ($(BUILD_MODE),DEBUG)
-    CFLAGS += -g -O0
-	ifeq ($(PLATFORM),PLATFORM_WEB)
+    CFLAGS += -g -D_DEBUG
+    ifeq ($(PLATFORM),PLATFORM_WEB)
         CFLAGS += -s ASSERTIONS=1 --profiling
     endif
 else
@@ -270,8 +238,9 @@ ifeq ($(PLATFORM),PLATFORM_DRM)
     CFLAGS += -std=gnu99 -DEGL_NO_X11
 endif
 
-# Define include paths for required headers
-# NOTE: Several external required libraries (stb and others)
+# Define include paths for required headers: INCLUDE_PATHS
+# NOTE: Some external/extras libraries could be required (stb, easings...)
+#------------------------------------------------------------------------------------------------
 INCLUDE_PATHS = -I. -I$(RAYLIB_PATH)/src -I$(RAYLIB_PATH)/src/external
 
 # Define additional directories containing required header files
@@ -292,10 +261,9 @@ ifeq ($(PLATFORM),PLATFORM_DRM)
     INCLUDE_PATHS += -I/usr/include/libdrm
 endif
 
-# Define library paths containing required libs.
-#LDFLAGS = -L. -L$(RAYLIB_RELEASE_PATH) -L$(RAYLIB_PATH)/src
-LDFLAGS = -L.
-
+# Define library paths containing required libs: LDFLAGS
+#------------------------------------------------------------------------------------------------
+LDFLAGS = -L. -L$(RAYLIB_RELEASE_PATH) -L$(RAYLIB_PATH)/src
 
 ifeq ($(PLATFORM),PLATFORM_DESKTOP)
     ifeq ($(PLATFORM_OS),WINDOWS)
@@ -307,14 +275,12 @@ ifeq ($(PLATFORM),PLATFORM_DESKTOP)
         endif
     endif
     ifeq ($(PLATFORM_OS),LINUX)
-        LDFLAGS += -L$(RAYLIB_LIB_PATH) $(shell pkg-config --libs raylib)
+        LDFLAGS += -L$(RAYLIB_LIB_PATH)
     endif
     ifeq ($(PLATFORM_OS),BSD)
         LDFLAGS += -Lsrc -L$(RAYLIB_LIB_PATH)
     endif
 endif
-
-
 ifeq ($(PLATFORM),PLATFORM_WEB)
     # -Os                        # size optimization
     # -O2                        # optimization level 2, if used, also set --memory-init-file 0
@@ -357,31 +323,29 @@ ifeq ($(PLATFORM),PLATFORM_WEB)
     # logic to a self contained function: UpdateDrawFrame(), check core_basic_window_web.c for reference.
 
 endif
-
 ifeq ($(PLATFORM),PLATFORM_RPI)
     LDFLAGS += -L$(RPI_TOOLCHAIN_SYSROOT)/opt/vc/lib
 endif
 
-# Define any libraries required on linking
-# if you want to link libraries (libname.so or libname.a), use the -lname
+# Define libraries required on linking: LDLIBS
+# NOTE: To link libraries (lib<name>.so or lib<name>.a), use -l<name>
+#------------------------------------------------------------------------------------------------
 ifeq ($(PLATFORM),PLATFORM_DESKTOP)
     ifeq ($(PLATFORM_OS),WINDOWS)
         # Libraries for Windows desktop compilation
         # NOTE: WinMM library required to set high-res timer resolution
         LDLIBS = -lraylib -lopengl32 -lgdi32 -lwinmm
-        # Required for physac examples
-        #LDLIBS += -static -lpthread
     endif
     ifeq ($(PLATFORM_OS),LINUX)
         # Libraries for Debian GNU/Linux desktop compiling
         # NOTE: Required packages: libegl1-mesa-dev
         LDLIBS = -lraylib -lGL -lm -lpthread -ldl -lrt
-        
+
         # On X11 requires also below libraries
         LDLIBS += -lX11
         # NOTE: It seems additional libraries are not required any more, latest GLFW just dlopen them
         #LDLIBS += -lXrandr -lXinerama -lXi -lXxf86vm -lXcursor
-        
+
         # On Wayland windowing system, additional libraries requires
         ifeq ($(USE_WAYLAND_DISPLAY),TRUE)
             LDLIBS += -lwayland-client -lwayland-cursor -lwayland-egl -lxkbcommon
@@ -390,7 +354,8 @@ ifeq ($(PLATFORM),PLATFORM_DESKTOP)
         ifeq ($(RAYLIB_LIBTYPE),SHARED)
             LDLIBS += -lc
         endif
-		# NOTE: On ARM 32bit arch, miniaudio requires atomics library
+        
+        # NOTE: On ARM 32bit arch, miniaudio requires atomics library
         LDLIBS += -latomic
     endif
     ifeq ($(PLATFORM_OS),OSX)
@@ -429,60 +394,90 @@ ifeq ($(PLATFORM),PLATFORM_WEB)
     LDLIBS = $(RAYLIB_RELEASE_PATH)/libraylib.a
 endif
 
+# Define source code object files required
+#------------------------------------------------------------------------------------------------
+CORE = \
+    core/core_basic_window \
+    core/core_basic_screen_manager \
+    core/core_input_keys \
+    core/core_input_mouse \
+    core/core_input_mouse_wheel \
+    core/core_input_gamepad \
+    core/core_input_multitouch \
+    core/core_input_gestures \
+    core/core_2d_camera \
+    core/core_2d_camera_platformer \
+    core/core_2d_camera_mouse_zoom \
+    core/core_3d_camera_mode \
+    core/core_3d_camera_free \
+    core/core_3d_camera_first_person \
+    core/core_3d_picking \
+    core/core_world_screen \
+    core/core_custom_logging \
+    core/core_drop_files \
+    core/core_random_values \
+    core/core_scissor_test \
+    core/core_storage_values \
+    core/core_vr_simulator \
+    core/core_loading_thread \
+    core/core_window_flags \
+    core/core_window_letterbox \
+    core/core_window_should_close \
+    core/core_split_screen \
+    core/core_smooth_pixelperfect \
+    core/core_custom_frame_control
 
-LDLIBS += noise/libnoise.a
-LDLIBS += lib/misc.a
-LDLIBS += -llua -lm
-LDLIBS += lua_api/liblua_api.a
-LDLIBS += map/libmap.a
-LDLIBS += -lnoise 
-LDLIBS += -lFastNoise
+SHAPES = \
+    shapes/shapes_basic_shapes \
+    shapes/shapes_bouncing_ball \
+    shapes/shapes_colors_palette \
+    shapes/shapes_logo_raylib \
+    shapes/shapes_logo_raylib_anim \
+    shapes/shapes_rectangle_scaling \
+    shapes/shapes_lines_bezier \
+    shapes/shapes_collision_area \
+    shapes/shapes_following_eyes \
+    shapes/shapes_easings_ball_anim \
+    shapes/shapes_easings_box_anim \
+    shapes/shapes_easings_rectangle_array \
+    shapes/shapes_draw_ring \
+    shapes/shapes_draw_circle_sector \
+    shapes/shapes_draw_rectangle_rounded \
+    shapes/shapes_top_down_lights
 
+TEXTURES = \
 
+TEXT = \
 
-# Define a recursive wildcard function
-rwildcard=$(foreach d,$(wildcard $1*),$(call rwildcard,$d/,$2) $(filter $(subst *,%,$2),$d))
+MODELS = \
 
-# Define all source files required
-#SRC_DIR = src
-SRC_DIR = .
-#OBJ_DIR = obj
-OBJ_DIR = .
+SHADERS = \
 
-# Define all object files from source files
-SRC = $(call rwildcard, *.cpp, *.h)
-#OBJS = $(SRC:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
-#OBJS ?= main.c
-OBJS =\
-main.o \
+AUDIO = \
 
-# For Android platform we call a custom Makefile.Android
-ifeq ($(PLATFORM),PLATFORM_ANDROID)
-    MAKEFILE_PARAMS = -f Makefile.Android 
-    export PROJECT_NAME
-    export SRC_DIR
-else
-    MAKEFILE_PARAMS = $(PROJECT_NAME)
-endif
+CURRENT_MAKEFILE = $(lastword $(MAKEFILE_LIST))
 
+# Define processes to execute
+#------------------------------------------------------------------------------------------------
 # Default target entry
-# NOTE: We call this Makefile target or Makefile.Android target
-all: clean
-	$(MAKE) -C noise/
-	$(MAKE) -C lib/
-	$(MAKE) -C lua_api/
-	$(MAKE) -C map/
-	$(MAKE) $(MAKEFILE_PARAMS)
+all: $(CORE) $(SHAPES) $(TEXT) $(TEXTURES) $(MODELS) $(SHADERS) $(AUDIO)
 
-# Project target defined by PROJECT_NAME
-$(PROJECT_NAME): $(OBJS)
-	$(CC) -o $(PROJECT_NAME)$(EXT) $(OBJS) $(CFLAGS) $(INCLUDE_PATHS) $(LDFLAGS) $(LDLIBS) -D$(PLATFORM)
+core: $(CORE)
+shapes: $(SHAPES)
+textures: $(TEXTURES)
+text: $(TEXT)
+models: $(MODELS)
+shaders: $(SHADERS)
+audio: $(AUDIO)
 
-# Compile source files
-# NOTE: This pattern will compile every module defined on $(OBJS)
-#%.o: %.c
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
-	$(CC) -c $< -o $@ $(CFLAGS) $(INCLUDE_PATHS) -D$(PLATFORM)
+# Generic compilation pattern
+# NOTE: Examples must be ready for Android compilation!
+%: %.c
+ifeq ($(PLATFORM),PLATFORM_ANDROID)
+	$(MAKE) -f Makefile.Android PROJECT_NAME=$@ PROJECT_SOURCE_FILES=$<
+else
+	$(CC) -o $@$(EXT) $< $(CFLAGS) $(INCLUDE_PATHS) $(LDFLAGS) $(LDLIBS) -D$(PLATFORM)
+endif
 
 # Clean everything
 clean:
@@ -491,9 +486,8 @@ ifeq ($(PLATFORM),PLATFORM_DESKTOP)
 		del *.o *.exe /s
     endif
     ifeq ($(PLATFORM_OS),LINUX)
-	find -type f -executable | xargs file -i | grep -E 'x-object|x-archive|x-sharedlib|x-executable' | rev | cut -d ':' -f 2- | rev | xargs rm -fv
-	rm -f makecraft
-	rm -f *.o
+		find . -type f -executable -delete
+		rm -fv *.o
     endif
     ifeq ($(PLATFORM_OS),OSX)
 		find . -type f -perm +ugo+x -delete
@@ -504,17 +498,15 @@ ifeq ($(PLATFORM),PLATFORM_RPI)
 	find . -type f -executable -delete
 	rm -fv *.o
 endif
-ifeq ($(PLATFORM),PLATFORM_WEB)
-	del *.o *.html *.js
+ifeq ($(PLATFORM),PLATFORM_DRM)
+	find . -type f -executable -delete
+	rm -fv *.o
 endif
-	$(MAKE) -C noise/ clean
-	$(MAKE) -C lua_api/ clean
-	$(MAKE) -C lib/ clean
-	$(MAKE) -C map/ clean
+ifeq ($(PLATFORM),PLATFORM_WEB)
+    ifeq ($(PLATFORM_OS),WINDOWS)
+		del *.wasm *.html *.js *.data
+    else
+		rm -f */*.wasm */*.html */*.js */*.data
+    endif
+endif
 	@echo Cleaning done
-
-raylib:
-	make -f raylib.mk raylib
-
-run:
-	./makecraft --script test.lua
