start port to wasm

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,6 +1,12 @@
 CC      = gcc
 CFLAGS  = -Wall
 LDFLAGS =
+AR = ar
+
+ifeq ($(PLATFORM),PLATFORM_WEB)
+CC = emcc
+AR = emar
+endif
 
 .PHONY: all clean
 
@@ -10,7 +16,7 @@ misc.o:
 	$(CC) -o $@ startswith.c -c $(CCFLAGS) $(LDFLAGS)
 
 misc.a: misc.o
-	ar rcs misc.a $^
+	$(AR) rcs misc.a $^
 
 clean:
 	rm -rf misc.a misc.o
