--- a/noise/Makefile
+++ b/noise/Makefile
@@ -1,6 +1,13 @@
 CC      = g++
 CFLAGS  = -Wall -g
 LDFLAGS =
+AR = ar
+
+ifeq ($(PLATFORM),PLATFORM_WEB)
+CC = em++
+AR = emar
+CFLAGS += -I/usr/local/include -std=c++14
+endif
 
 SRCS := $(wildcard *.cpp)
 OBJS = $(patsubst %.cpp,%.o,$(SRCS))
@@ -13,7 +20,7 @@ all: clean libnoise.a
 	$(CC) -o $@ $^ -c $(CFLAGS) $(LDFLAGS)
 
 libnoise.a: $(OBJS)
-	ar rcs libnoise.a $^
+	$(AR) rcs libnoise.a $^
 
 clean:
 	rm -rf libnoise.a $(OBJS) *.o *.a
