work on replacing blockarray with chunk array

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,6 +112,9 @@
         "__verbose_abort": "cpp",
         "ios": "cpp",
         "locale": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "ranges": "cpp",
+        "stack": "cpp",
+        "list.h": "c"
     }
 }
