work on chunk list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,6 +115,7 @@
         "queue": "cpp",
         "ranges": "cpp",
         "stack": "cpp",
-        "list.h": "c"
+        "list.h": "c",
+        "*.m": "cpp"
     }
 }
