--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,46 +8,31 @@
 	},
 	"C_Cpp.errorSquiggles": "Disabled",
 	"files.associations": {
-        "io": "llvm",
-        "std": "llvm",
-        "*.wasm": "wasm",
-        "*.toml": "toml",
-        "*.hpoint": "cpoint",
-        "stddef.h": "c",
-        "block.h": "c",
-        "chunk.h": "c",
-        "allocator": "cpp",
+        "any": "cpp",
         "array": "cpp",
-        "limits": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "bitset": "cpp",
         "cctype": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
-        "csignal": "cpp",
+        "codecvt": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "condition_variable": "cpp",
+        "coroutine": "cpp",
         "cstdarg": "cpp",
         "cstddef": "cpp",
+        "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "cstring": "cpp",
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
-        "any": "cpp",
-        "atomic": "cpp",
-        "hash_map": "cpp",
-        "hash_set": "cpp",
-        "bit": "cpp",
-        "*.tcc": "cpp",
-        "bitset": "cpp",
-        "cfenv": "cpp",
-        "charconv": "cpp",
-        "chrono": "cpp",
-        "cinttypes": "cpp",
-        "codecvt": "cpp",
-        "compare": "cpp",
-        "complex": "cpp",
-        "concepts": "cpp",
-        "condition_variable": "cpp",
-        "cstdint": "cpp",
         "deque": "cpp",
         "forward_list": "cpp",
         "list": "cpp",
@@ -73,6 +58,7 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
+        "format": "cpp",
         "fstream": "cpp",
         "future": "cpp",
         "initializer_list": "cpp",
@@ -80,42 +66,25 @@
         "iosfwd": "cpp",
         "iostream": "cpp",
         "istream": "cpp",
+        "limits": "cpp",
         "mutex": "cpp",
         "new": "cpp",
         "numbers": "cpp",
         "ostream": "cpp",
         "semaphore": "cpp",
+        "shared_mutex": "cpp",
+        "span": "cpp",
         "sstream": "cpp",
         "stdexcept": "cpp",
+        "stdfloat": "cpp",
         "stop_token": "cpp",
         "streambuf": "cpp",
+        "text_encoding": "cpp",
         "thread": "cpp",
-        "typeindex": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp",
-        "variant": "cpp",
-        "*.inc": "cpp",
-        "makecraft.h": "c",
-        "raylib.h": "c",
-        "stdlib.h": "c",
-        "string.h": "c",
-        "__locale": "cpp",
-        "rlgl.h": "c",
-        "format": "cpp",
-        "span": "cpp",
-        "__bit_reference": "cpp",
-        "__config": "cpp",
-        "__hash_table": "cpp",
-        "__node_handle": "cpp",
-        "__split_buffer": "cpp",
-        "__tree": "cpp",
-        "__verbose_abort": "cpp",
-        "ios": "cpp",
-        "locale": "cpp",
-        "queue": "cpp",
-        "ranges": "cpp",
-        "stack": "cpp",
-        "list.h": "c",
-        "*.m": "cpp"
+        "variant": "cpp"
     }
 }
